syntax = "proto3";
option go_package = ".;databaseGrpc";
package databaseGrpc;

import "player.proto";

service AccountService {
  rpc AccountFindByPhone(AccountFindByPhoneRequest) returns (AccountFindByPhoneResponse) {}
  rpc AccountAdd(AccountAddRequest) returns (AccountAddResponse) {}
  rpc AccountFindPlayerByAccountId(AccountFindPlayerByAccountIdRequest) returns (AccountFindPlayerByAccountIdResponse) {}
  rpc AccountGetAccountByPlayerId(AccountGetAccountInfoByPlayerIdRequest) returns (AccountGetAccountInfoByPlayerIdResponse) {}
}

message AccountFindByPhoneRequest {
  string phone = 1;
}

message AccountFindByPhoneResponse {
  Account account = 1;
}

message AccountAddRequest {
  Account account = 1;
}

message AccountAddResponse {
  string objectId = 1;
}

message AccountFindPlayerByAccountIdRequest {
  string accountId = 1;
}

message AccountFindPlayerByAccountIdResponse {
  Player playerInfo = 1;
}

message AccountGetAccountInfoByPlayerIdRequest {
  int32 PlayerId = 1;
}

message AccountGetAccountInfoByPlayerIdResponse {
  Account accountInfo = 1;
}


message Account {
  string objectId = 1; //objectId
  int32 playerId = 2;
  string loginPassword = 3;
  bool delete = 4;
  string phone = 5;
  int64 recentLogin = 6;
  int64 createAt = 7;
  int64 updateAt = 8;
}